@@ -3,36 +3,9 @@ Credit goes to:
 
 Developers: 
 ----------
-	Crazor
-	Dense
-	fassl
-	iNDi
-	JrCs
-	Kabyl
-	kaitek
-	mackerintel
-	mercurysquad
-	munky
-	meklort
-	mozodojo
-	rekursor
-	Turbo
-	valv
-	zef
-	cparm
+zef,  Turbo, dfe, netkas, mackerintel, fassl, Kabyl, kaitek, iNDi,  asereBLN, mozodojo, meklort, AzimutZ, Slice
 
 Thanks to:
 --------- 
-	asereBLN
-	Azimutz
-	bumby
-	cosmo1t
-	dfe
-	Galaxy
-	kalyway
-	Krazubu
-	MasterChief
-	netkas
-	sckevyn
-	smith@@
-	THeKiNG
+JrCs, mercurysquad, munky, rekursor,  cosmolt, kalyway, Krazubu, THeKiNG, XyZ, blackosx, DHP,  cparm
+
