@@ -1,9 +1,8 @@
 TODO List for Chameleon Boot Loader
 ====================================
-- Bring code closer to coding_standards.txt.
+- Fix boot prompt parsing.
 
-- Create a dummy module for any modules that are compiled in. This is needed for linking modules with
-  dependencies that are not compiled in.
+- Bring code closer to coding_standards.txt.
 
 - Fix the module system when booting chameleon with multiboot. Cleanup the xcode 4 fix.
 
@@ -20,6 +19,9 @@ TODO List for Chameleon Boot Loader
 ====================================
 
 DONE
+
+- Create a dummy module for any modules that are compiled in. This is needed for linking modules with
+  dependencies that are not compiled in.
 
 - Add a more sophisticated acpi loading mechanism to enable loading custom acpi tables when dsdtdrop=y
     Here's a specification to think about:
@@ -50,7 +52,7 @@ DONE
 
   The preferred internal behavior of the log info ioreg buffer
   would be to store the messages in a consolidated buffer then only write once,
- this buffer (i.e just before call the kernel) with flushLogToIOREG();
+  this buffer (i.e just before call the kernel) with flushLogToIOREG();
   The other public function for writing chameleon boot info data would be:
 
   verbose() should incorporate a call to logMessageToIOREG() 
