@@ -6,5 +6,5 @@ config HPET_MODULE
 	tristate "HPET Module"
 	default m
 	---help---
-	  Say Y here if you want to enable to use of this module.
+	  Say Y here if you want to enable the use of this module.
 
