@@ -1,3 +1,9 @@
+- Added NVidia ION AHCI controllers dev id to AHCIPortInjector kext.
+  Forgot to mention source on the commit: http://forum.voodooprojects.org/index.php/topic,1170.0.html
+- Renamed com.apple.Boot.plist to org.chameleon.Boot.plist.
+- Added "ShowInfo" key (enabled by default for now), which enables/disables the display of
+  partition and resolution related info, on the Gui.
+  This info may not play well with some custom themes.
 - Modules can now be selected between not compiled, compiled into chameleon, or compiled as modules.
 - New makefile + configuration system.
 - Added the BOOT2_MAX_LENGTH constant in memory.h. This is now used in mboot.c to relocate the correct
@@ -34,7 +40,7 @@
 - Added ATI new framebuffers support and new cards from PCEFI10.6
 - improved ACPI file search algo by implementing a cache.
 - Nvidia injection fix
-- pciroot would not always return correct UID in auto dection mode
+- pciroot would not always return correct UID in auto detection mode
 - Fixed the hibernation problem in boot2/resume.c
 - Fixed all new booter versions with SystemType would override the facp value even if correct,
   now keeps the facp value if correct and no override has been done, implemented a best effort algo.
